# packet-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
benches/: codec.rs  decode_bench.rs  encode_bench.rs  parse_bench.rs
docs/: dsl-specification.md
src/: codec.rs  error.rs  lib.rs  loader.rs
src/ast/: mod.rs  schema.rs  types.rs
src/parser/: lexer.rs  mod.rs  parser_impl.rs
src/validator/: mod.rs
tests/: error_message_test.rs  fuzz_test.rs  integration_test.rs  p3_features.rs
